tests/valid/ignore_unused_use.php
<?php
// php-checker-ignore: cleanup/unused_use

use Multi\Service as Svc;
use Multi\Client;

Svc\takesTwo(1);

